# example-versioning-dvc

./: .gitignore  README.md  data.dvc  pyproject.toml
.dvc/: config
dvc-pipelines/: README.md  dvc.yaml
