[tool.poetry]
name = "example-versioning-dvc"
version = "0.1.0"
description = "Example data versioning with DVC"
authors = ["Marco Paspuel <marco.paspuel@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
