[tool.poetry]
name = "example-versioning-dvc"
version = "0.1.0"
description = "Example data versioning with DVC"
authors = ["Marco Paspuel <marco.paspuel@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
dvc = "2.8.1"
pandas = "^1.3.3"
pyaml = "^21.10.1"
scikit-learn = "^1.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
